# python-legacy

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  Makefile  README.md  README.rst  generate.sh  package-lock.json  package.json  pyproject.toml  renovate.json  test_webview.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: _build.yml  _publish.yml  check.yml  dependabot-auto-merge.yml  generate.yml  publish.yml  release.yml  test.yml  version.yml
examples/: utils.py
examples/interactive_select_lock_unlock/: interactive_select_lock_unlock.py
examples/interactive_set_access_codes/: interactive_set_access_codes.py
scripts/: generate.sh  prebuild.py
seamapi/: __init__.py  access_codes.py  access_codes_simulate.py  access_codes_unmanaged.py  acs.py  acs_access_groups.py  acs_credential_pools.py  acs_credential_provisioning_automations.py  acs_credentials.py  acs_entrances.py  acs_systems.py  acs_users.py  action_attempts.py  client_sessions.py  climate_setting_schedules.py  connect_webviews.py  connected_accounts.py  devices.py  devices_simulate.py  devices_unmanaged.py  events.py  health.py  health_service.py  locks.py  networks.py  noise_sensors.py  noise_sensors_noise_thresholds.py  noise_sensors_simulate.py  noise_thresholds.py  phones.py  phones_simulate.py  routes.py  seam.py  thermostats.py  thermostats_climate_setting_schedules.py  types.py  user_identities.py  user_identities_enrollment_automations.py  webhooks.py  workspaces.py
seamapi/seamapi/: __init__.py  access_codes.py  access_codes_simulate.py  access_codes_unmanaged.py  acs_access_groups.py  acs_credential_pools.py  acs_credential_provisioning_automations.py  acs_credentials.py  devices.py  (+24 more)
tests/: conftest.py  test_init_seam.py  test_sentry_errors.py
(+26 files in other folders)
