[tool.poetry]
name = "seamapi"
version = "2.2.0"
description = "A Python Library for Seam's API https://getseam.com"
authors = ["Severin Ibarluzea <seveibar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
dataclasses-json = "^0.5.6"
sentry-sdk = "^1.9.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
testcontainers = {extras = ["postgresql"], version = "^3.4.2"}
responses = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
