[tool.poetry]
name = "seamapi"
version = "2.19.0"
description = "A Python Library for Seam's API https://getseam.com"
authors = ["Severin Ibarluzea <seveibar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
dataclasses-json = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
black = "^24.3.0"
testcontainers = {extras = ["postgresql"], version = "^3.4.2"}
responses = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
